# myrobot_ROSproject

./: .gitignore  README.md  manual_control.py
myrobot/: CMakeLists.txt  package.xml
myrobot/launch/: myrobot_basic.launch.py  myrobot_control.launch.py  myrobot_move_group.launch.py
myrobot/model/: basic_controllers.yaml  kinematics.yaml  myrobot.srdf  myrobot_moveit_controllers.yaml  myrobot_ros2_controllers.yaml  myworld.world  myworld1.world  myworld2.world  myworld3.world  myworld4.world  myworld5.world  myworld6.world  myworld7.world  myworld8.world  myworld9.world  myworld_pose1.world  myworld_pose2.world  ompl_planning.yaml  robot_model.urdf  robot_model.xacro
myrobot/model/objects/: myworld1.world  myworld2.world  myworld3.world  myworld4.world  myworld_pose0.world
myrobot/model/objects/MyWorld/: model.config  model.sdf
myrobot/model/objects/crisps/: crisps.dae  model.config  model.sdf
myrobot/model/objects/oats/: model.config  model.sdf  oats.dae
myrobot/src/: myrobot_control.cpp  myrobot_control_00.cpp
myrobot_interfaces/: CMakeLists.txt  package.xml
myrobot_interfaces/srv/: GetObjectPoint.srv  SetTargetPose.srv
myrobot_state_machine/: package.xml  setup.cfg  setup.py
myrobot_state_machine/myrobot_state_machine/: myrobot_sm.py
myrobot_vision/: package.xml  setup.cfg  setup.py
myrobot_vision/chessboard/: calib_imgs.py
myrobot_vision/chessboard/checkerboard_6_8_0_05/: checkerboard.sdf  model.config
myrobot_vision/dnn/: model.pth
myrobot_vision/myrobot_vision/: interface_test.py  moveit_test_client.py  myrobot_vision_proc.py
(+16 files in other folders)
